--- a/src/app/mobile-list/filters/checkbox/checkbox.component.html
+++ b/src/app/mobile-list/filters/checkbox/checkbox.component.html
@@ -1,7 +1,11 @@
-<label class="form-check-label" for="checkbox{{modelCheckbox}}{{bucket.key}}">
-  <input class="form-check-input" 
-         type="checkbox" value="{{ bucket.key }}"
-         [checked]= "selectedOptions.indexOf(bucket.key) != -1"
-         id="checkbox{{modelCheckbox}}{{bucket.key}}" (change)="onCheckboxChange($event, bucket.key)">
-  {{ mobileService.humanize(bucket.key) }} ({{ bucket.count }})
-</label>
+<div class="custom-control custom-checkbox">
+  <input 
+    class="custom-control-input" 
+    type="checkbox" value="{{ bucket.key }}"
+    [checked]= "selectedOptions.indexOf(bucket.key) != -1"
+    id="checkbox{{modelCheckbox}}{{bucket.key}}" 
+    (change)="onCheckboxChange($event, bucket.key)">
+  <label class="custom-control-label" for="checkbox{{modelCheckbox}}{{bucket.key}}">
+    {{ mobileService.humanize(bucket.key) }} ({{ bucket.count }})
+  </label>
+</div>
