--- a/src/app/mobile-list/mobile-list.component.html
+++ b/src/app/mobile-list/mobile-list.component.html
@@ -5,10 +5,14 @@
   type = "pacman"
 ></ngx-spinner>
 
-<section class="jumbotron text-center" style="padding: 2rem 1rem; margin-bottom: 1rem;">
+<section class="jumbotron text-center">
   <div class="container">
-    <h1 class="jumbotron-heading">Rails & Searchkick Example</h1>
+    <h1 class="jumbotron-heading">Angular, Rails, Searchkick Example</h1>
     <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+    <p>
+      <a routerLink="/" href="#" class="btn btn-primary my-2">Main call to action</a>
+      <a routerLink="/" href="#" class="btn btn-secondary my-2">Secondary action</a>
+    </p>
     <div style="margin: auto; width: 422px;">
       <form action="" class="form-inline search-form" style="width: 422px;">
         <input #searchInput name="search" style="width: 422px;" class="form-control" type="search" placeholder="Search" aria-label="Search" value="" (blur)="onSearchTextFieldBlur()">
