--- a/src/app/mobile-list/mobile-list.component.css
+++ b/src/app/mobile-list/mobile-list.component.css
@@ -2,8 +2,13 @@ a.filters {
     background-color: lightgray;
     margin-right: 5px;
     padding: 2px;
+    cursor: pointer;
 }
 
 .upcase {
     text-transform: uppercase;
+}
+
+.nav-tabs .nav-item {
+    cursor: pointer;
 }
