--- a/src/app/mobile-list/filters/filters.component.html
+++ b/src/app/mobile-list/filters/filters.component.html
@@ -1,10 +1,10 @@
 <div class="card mb-4 box-shadow">
   <div class="card-body" *ngIf="aggregation">
-    <a class="clear-filter" *ngIf="selectedOptions.length !== 0" (click)="clearFilter()">
+    <a class="btn btn-raised btn-sm btn-danger clear-filter" *ngIf="selectedOptions.length !== 0" (click)="clearSelectedOptions()">
       clear <span aria-hidden="true">×</span>
     </a>
     
-    <h6 class="card-subtitle mb-2 text-muted">{{ mobileService.humanize(aggregation.name) }}</h6>
+    <h6 class="card-title mb-2 text-muted">{{ mobileService.humanize(aggregation.name) }}</h6>
     
     <app-checkbox *ngFor="let bucket of aggregation.buckets | slice:0:5;" [categoryName]="aggregation.name" [bucket]="bucket" [selectedOptions]="selectedOptions"></app-checkbox>
 
