Improvements for appying filters

--- a/src/app/mobile-list/filters/checkbox/checkbox.component.html
+++ b/src/app/mobile-list/filters/checkbox/checkbox.component.html
@@ -1,4 +1,4 @@
-<div class="checkbox">
+<div class="checkbox custom-checkbox">
   <label>
     <input
       type="checkbox" value="{{ bucket.key }}"
