--- a/src/app/mobile-list/mobile-list.component.css
+++ b/src/app/mobile-list/mobile-list.component.css
@@ -15,13 +15,23 @@ a.suggestion {
     margin-right: .25rem;
 }
 
-.load-more {
-    float: none !important;
-    margin-bottom: 20px;
+.pagination-container {
+    width: 100%;
 }
 
-.load-more + .load-more {
+.pagination {
+    padding: .10625rem .5rem !important;
+    display: inherit;
+    margin-bottom: 0;
+    float: left;
+}
+
+.pagination + .pagination {
     margin-left: .25rem;
+}
+
+.pagination + .pagination.float-right {
+    margin-right: .25rem;
 }
 
 .float-right {
