--- a/src/app/mobile-list/modal/modal.component.html
+++ b/src/app/mobile-list/modal/modal.component.html
@@ -1,5 +1,5 @@
-<!-- Modal -->
-<div class="modal fade bd-example-modal-lg" id="{{aggregation.name}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static">
+<!-- Modal Start -->
+<div class="modal fade bd-example-modal-lg" *ngIf="aggregation" id="{{aggregation.name}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -18,3 +18,4 @@
     </div>
   </div>
 </div>
+<!-- Modal End -->
