--- a/src/app/mobile-list/filters/checkbox/checkbox.component.html
+++ b/src/app/mobile-list/filters/checkbox/checkbox.component.html
@@ -9,6 +9,6 @@
         <span class="check"></span>
         <div class="ripple-container"></div>
       </span>
-    {{ mobileService.humanize(bucket.key) }} ({{ bucket.count }})
+    {{ utilityService.humanize(bucket.key) }} ({{ bucket.count }})
   </label>
 </div>
