--- a/src/app/mobile-list/filters/filters.component.html
+++ b/src/app/mobile-list/filters/filters.component.html
@@ -4,7 +4,7 @@
       clear <span aria-hidden="true">×</span>
     </a>
     
-    <h6 class="card-subtitle mb-2 text-muted">{{ mobileService.humanize(aggregation.name) }}</h6>
+    <h6 class="card-subtitle mb-2 text-muted">{{ utilityService.humanize(aggregation.name) }}</h6>
     
     <app-checkbox *ngFor="let bucket of aggregation.buckets | slice:0:5;" [categoryName]="aggregation.name" [bucket]="bucket"></app-checkbox>
 
