--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,1 @@
-<p>We are sorry, the requested page could not be found.</p>
+<img src="/src/assets/img/creative-404-error-page-design-marketing-assets.jpg" style="margin: 20px auto; display: block;">
